k8s/test/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-store-deployment
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mini-store
  template:
    metadata:
      labels:
        app: mini-store
    spec:
      containers:
      - name: mini-store
        image: samirbch/mini-store:v19
        ports:
        - containerPort: 5000
        env:
        - name: MONGO_URI
          value: "mongodb://mongodb-0.mongodb-service.test.svc.cluster.local:27017,mongodb-1.mongodb-service.test.svc.cluster.local:27017,mongodb-2.mongodb-service.test.svc.cluster.local:27017/store?replicaSet=rs0"
      imagePullSecrets:
      - name: docker-secret   # ← ajouter ici
